<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:weightSum="2"
        android:layout_height="110dp">

        <TextView
            android:layout_weight="1.4"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="left"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:text="@string/psa"/>

        <TextView
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="right|center"
            android:drawableStart="@mipmap/white_loc"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:text="@string/finca"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="140dp"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="27sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="left"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/dashboard"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="120dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_corner_orange_base_color"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:padding="10dp"
                android:layout_width="50dp"
                android:layout_marginTop="5dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@mipmap/syc_now"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="2dp"
                android:textColor="@color/white"
                android:text="@string/sync_now"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_corner_blue_color"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:text="7"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="2dp"
                android:textColor="@color/white"
                android:text="@string/completed"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/round_corner_darkorange_base_color"
            android:layout_height="wrap_content">

            <TextView
                android:padding="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:text="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/incompleted"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_corner_white_base_color"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="wrap_content"
            android:src="@mipmap/add"
            android:id="@+id/iv_add_evaluation"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:weightSum="1"
        android:layout_gravity="bottom"
        android:baselineAligned="true"
        android:layout_marginTop="-20dp"
        android:layout_height="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="0.3"
            android:gravity="left"
            android:textColor="@color/white"
            android:text="@string/version"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_weight="0.7"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:gravity="right"
            android:textColor="@color/white"
            android:text="@string/all_rights"/>
    </LinearLayout>

</LinearLayout>